<resources>
    <string name="app_name">MisMascotas</string>
    <!-- Activity Contacto -->
    <string name="title_contacto">Contacto</string>
    <string name="name_contact">Nombre</string>
    <string name="email_contact">E-mail</string>
    <string name="msj_contact">Mensaje</string>
    <string name="btn_send">Enviar Comentario</string>
    <!-- Activity Acerca de -->
    <string name="title_bio">Acerca de:</string>
    <string name="texto_bio">Desarrollado Por: MisMascotas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- cardview_perfil -->
    <string name="descripcionImgCardView">Imagen Mascota</string>
    <!-- -->
    <string name="nombreMascota">Facha</string>

    <string name="plikes">0 Likes</string>
    <string name="confirmar">Confirmar</string>
    <string name="telefono">Teléfono</string>
    <string name="cc">Confirmar contraseña</string>
    <string name="contrasena">Contraseña</string>
    <string name="email">E-mail</string>
    <string name="nombre_del_usuario">Nombre de usuario</string>
    <string name="registrarse">Registro</string>
    <string name="VolverLogin">Ya tienes cuenta? Accede!</string>
    <string name="enviar">enviar</string>
    <string name="registrate">registrate!</string>
    <string name="password">Password</string>
    <string name="Email">Email</string>
    <string name="registro">REGISTRO</string>
    <string name="login">LOGIN</string>
    <string name="RetornoLogin">VolverLogin</string>

</resources>