<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dip"
    android:paddingTop="20dp"
    tools:context=".RegistroUsuarios">

    <include
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/registrarse"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/nombre_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/nombre_del_usuario"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/contrasena"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/cc"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/telefono"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dip"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/telefono"
            android:inputType="phone" />


        <Button
            android:id="@+id/confirmar"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="30dp"
            android:text="@string/confirmar" />

        <TextView
            android:id="@+id/link_to_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="40dip"
            android:layout_marginBottom="16dip"
            android:gravity="center"
            android:text="@string/VolverLogin"
            android:textColor="#0b84aa"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/register_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:layout_marginBottom="40dip"

            android:gravity="center"
            android:textColor="#0b84aa"
            android:textSize="20sp" />





    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>